--- a/accountDetails.html
+++ b/accountDetails.html
@@ -15,7 +15,7 @@
     <p class="welcome">Logged in</p>
     <img src="logo.jpg" alt="Logo" class="logo" />
     <form class="login">
-      <button class="logout__btn">Logout</button>
+      <button class="login__btn logout">Logout</button>
     </form>
   </nav>
 
