--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- LOGIN -->
   <div class="login__area">
-    <p class="welcome">Log in to get started</p>
+    <p class="welcome__login">Log in to get started</p>
     <img src="logo.jpg" alt="Logo" class="logo" />
     <form class="login">
       <input type="text" placeholder="user" class="login__input login__input--user" />
