--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
- 
+
 
   <!-- LOGIN -->
   <div class="login__area">
     <p class="welcome__login">Log in to get started</p>
     <img src="logo.jpg" alt="Logo" class="logo" />
     <form class="login">
-      <input type="text" placeholder="user" class="login__input login__input--user"/>
+      <input type="text" placeholder="user" class="login__input login__input--user" />
       <!-- In practice, use type="password" -->
       <input type="text" placeholder="PIN" maxlength="4" class="login__input login__input--pin" />
-      <button class="login__btn" >&rArr;</button>
+      <button class="login__btn">&rArr;</button>
     </form>
   </div>
 
@@ -28,11 +28,9 @@
   <nav class="navbar">
     <p class="welcome">Logged in</p>
     <img src="logo.jpg" alt="Logo" class="logo" />
-    <form class="login">
-      <button class=" logout">Logout</button>
-    </form>
+    <button class="logout__btn">Logout</button>
   </nav>
-  
+
   <!-- --MAIN-- -->
   <main class="app">
     <!-- BALANCE -->
@@ -45,7 +43,7 @@
       </div>
       <p class="balance__value">0000€</p>
     </div>
-  
+
     <!-- MOVEMENTS -->
     <div class="movements">
       <div class="movements__row">
@@ -61,7 +59,7 @@
         <div class="movements__value">-378€</div>
       </div>
     </div>
-  
+
     <!-- SUMMARY -->
     <div class="summary">
       <p class="summary__label">In</p>
@@ -72,7 +70,7 @@
       <p class="summary__value summary__value--interest">0000€</p>
       <button class="btn--sort">&downarrow; SORT</button>
     </div>
-  
+
     <!-- OPERATION: TRANSFERS -->
     <div class="operation operation--transfer">
       <h2>Transfer money</h2>
@@ -84,7 +82,7 @@
         <label class="form__label">Amount</label>
       </form>
     </div>
-  
+
     <!-- OPERATION: LOAN -->
     <div class="operation operation--loan">
       <h2>Request loan</h2>
@@ -94,7 +92,7 @@
         <label class="form__label form__label--loan">Amount</label>
       </form>
     </div>
-  
+
     <!-- OPERATION: CLOSE -->
     <div class="operation operation--close">
       <h2>Close account</h2>
@@ -106,7 +104,7 @@
         <label class="form__label">Confirm PIN</label>
       </form>
     </div>
-  
+
     <!-- LOGOUT TIMER -->
     <p class="logout-timer">
       You will be logged out in <span class="timer">05:00</span>
