--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="app">
     <!-- BALANCE -->
     <div class="balance">
-      <div>
+      <div class="balance_div">
         <p class="balance__label">Current balance</p>
         <p class="balance__date">
           As of <span class="date">05/03/2023</span>
