--- a/intro.html
+++ b/intro.html
@@ -20,7 +20,7 @@
 
   <header class="header">
     <nav class="nav">
-      <img src="img/logo.png" alt="Bankist logo" class="nav__logo" id="logo" designer="Ali" data-version-number="3.0" />
+      <img src="img/logo.jpg" alt="Bankist logo" class="nav__logo" id="logo" designer="Ali" data-version-number="3.0" />
       <ul class="nav__links">
         <li class="nav__item">
           <a class="nav__link" href="#section--1">Features</a>
@@ -219,7 +219,7 @@
             autem esse non voluptatem saepe provident nihil molestiae.
           </blockquote>
           <address class="testimonial__author">
-            <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
+            <img src="img/user-1.png" alt="" class="testimonial__photo" />
             <h6 class="testimonial__name">Aarav Lynn</h6>
             <p class="testimonial__location">San Francisco, USA</p>
           </address>
@@ -317,7 +317,8 @@
     <img src="img/icon.png" alt="Logo" class="footer__logo" />
     <p class="footer__copyright">
       &copy; Copyright by
-      <a class="footer__link twitter-link" target="_blank" href="https://github.com/AAliasghar/BankApp">Aliasghar Asgharinia</a>. Portfolio Project.
+      <a class="footer__link twitter-link" target="_blank" href="https://github.com/AAliasghar/BankApp">Aliasghar
+        Asgharinia</a>. Portfolio Project.
     </p>
   </footer>
 
