--- a/intro.html
+++ b/intro.html
@@ -314,7 +314,7 @@
         <a class="footer__link" href="#">Contact Us</a>
       </li>
     </ul>
-    <img src="img/icon.png" alt="Logo" class="footer__logo" />
+    <img src="img/logo.jpg" alt="Logo" class="footer__logo" />
     <p class="footer__copyright">
       &copy; Copyright by
       <a class="footer__link twitter-link" target="_blank" href="https://github.com/AAliasghar/BankApp">Aliasghar
