--- a/intro.html
+++ b/intro.html
@@ -340,7 +340,8 @@
   </div>
   <div class="overlay hidden"></div>
 
-  <!-- <script src="script.js"></script> -->
+  <!-- JavaScript -->
+  <script src="script.js"></script>
 </body>
 
 </html>
